@@ -70,6 +70,8 @@ public class GatewayApp implements CommandLineRunner {
 	// @formatter:off
     /// ```properties
     /// -Dserver.port=5555
+	/// -XX:+UseZGC
+	/// -XX:+ZGenerational
     /// ```
     /// ```properties
     /// client_id => 95TxSsTPFA3tF12TBSMmUVK0da
